--- a/app/process-control/process-control.html
+++ b/app/process-control/process-control.html
@@ -25,7 +25,7 @@
                     <span ng-show="vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value" class="green-color" style="width: 160px; margin: 0;"><b>{{key | uppercase}}</b></span>
 
                     <div layout="row" style="position: absolute; right: 0; top: 0">
-                        <md-button ng-show="!vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value" ng-click="vm.startProcess(nm_key, key); $event.stopPropagation()" title="Start Process">
+                        <md-button ng-show="!vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value && key !== 'None'" ng-click="vm.startProcess(nm_key, key); $event.stopPropagation()" title="Start Process">
                             <i class="fa fa-play"></i>
                         </md-button>
                         <md-button ng-show="vm.sensorsToDisplay[nm_key + '_' + key + '_running'].value" ng-click="vm.restartProcess(nm_key, key); $event.stopPropagation()" title="Restart Process">
