upgraded to material v1, removed dummy demo code for screen shots

--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -1,4 +1,4 @@
-<div flex ng-controller="ReceptorStatusCtrl as vm" layout="column" layout-align="start"
+<div flex ng-controller="ReceptorStatusCtrl as vm" layout="column" layout-align="center"
      style="padding: 16px;" ng-class="{'connection-lost-bg':vm.connectionLost}">
     <md-checkbox md-theme="{{themePrimaryButtons}}" class="md-primary" ng-model="vm.sortBySubarrays"
         ng-mouseenter="vm.sortBySubarraysHover = true" ng-mouseleave="vm.sortBySubarraysHover = false"
