--- a/app/scheduler/subarray-resources/subarray-resources.html
+++ b/app/scheduler/subarray-resources/subarray-resources.html
@@ -34,10 +34,10 @@
         <div flex layout="column" style="overflow: auto; padding: 0 8px">
             <div
                 ng-repeat="subarray in vm.subarrays | filter: {id: vm.subarray_id} | orderBy:'id' track by $index"
-                class="subarray-container md-whiteframe-z2" layout="row" layout-align="start"
+                class="subarray-container" layout="row"
                 style="min-width: 650px; position: relative" flex>
 
-                <div layout="column" layout-align="start" flex>
+                <div layout="column" flex class="md-whiteframe-z2">
 
                     <md-toolbar
                         md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}"
